--- a/manual-recording-guide.html
+++ b/manual-recording-guide.html
@@ -279,6 +279,21 @@
                         自動再生で開く
                     </a>
                 </div>
+                
+                <div class="slideshow-card">
+                    <div class="slideshow-icon">📚</div>
+                    <h3 class="slideshow-title">内申点の考え方【中1編】</h3>
+                    <p class="slideshow-description">
+                        中1生の内申点対策で最も重要な英語学習についての20秒動画<br>
+                        1080×1080px / 5スライド
+                    </p>
+                    <a href="naishintips-chu1-slideshow.html" class="btn" target="_blank">
+                        スライドショーを開く
+                    </a>
+                    <a href="naishintips-chu1-slideshow.html?autoplay=true" class="btn btn-success" target="_blank">
+                        自動再生で開く
+                    </a>
+                </div>
             </div>
         </div>
 
