Add new tips slideshow: 内申点の考え方【中3編】
- Created naishintips-chu3-slideshow.html focusing on gap analysis between current status and target high school
- Emphasizes strategic approach: -10 points is challenging, -5 points is achievable with 20 extra points on exams
- Updated manual-recording-guide.html and index-v3.html to include the new slideshow option

--- a/index-v3.html
+++ b/index-v3.html
@@ -609,6 +609,7 @@
                             <option value="juku-data-tips">塾講師が教える「データの正しい見方」</option>
                             <option value="sns-tips">SNS投稿 完全攻略ガイド</option>
                             <option value="naishintips-chu1">内申点の考え方【中1編】英語の重要性</option>
+                            <option value="naishintips-chu3">内申点の考え方【中3編】志望校とのギャップ戦略</option>
                         </select>
                     </div>
                     <div id="videoPreviewContainer" style="margin-top: 15px; display: none;">
@@ -1232,7 +1233,8 @@
                 const videoUrls = {
                     'juku-data-tips': 'juku-data-tips-slideshow-fixed.html',
                     'sns-tips': 'sns-tips-slideshow.html',
-                    'naishintips-chu1': 'naishintips-chu1-slideshow.html'
+                    'naishintips-chu1': 'naishintips-chu1-slideshow.html',
+                    'naishintips-chu3': 'naishintips-chu3-slideshow.html'
                 };
                 
                 videoPreview.src = videoUrls[videoSelect.value] || '';
@@ -1535,7 +1537,8 @@
             const slideshowUrls = {
                 'juku-data-tips': 'juku-data-tips-slideshow-fixed.html',
                 'sns-tips': 'sns-tips-slideshow.html',
-                'naishintips-chu1': 'naishintips-chu1-slideshow.html'
+                'naishintips-chu1': 'naishintips-chu1-slideshow.html',
+                'naishintips-chu3': 'naishintips-chu3-slideshow.html'
             };
             
             const slideshowUrl = slideshowUrls[videoSelect.value];
