--- a/manual-recording-guide.html
+++ b/manual-recording-guide.html
@@ -294,6 +294,21 @@
                         自動再生で開く
                     </a>
                 </div>
+                
+                <div class="slideshow-card">
+                    <div class="slideshow-icon">🎯</div>
+                    <h3 class="slideshow-title">内申点の考え方【中3編】</h3>
+                    <p class="slideshow-description">
+                        中3生の志望校とのギャップを正確に把握し、戦略的に対策する20秒動画<br>
+                        1080×1080px / 5スライド
+                    </p>
+                    <a href="naishintips-chu3-slideshow.html" class="btn" target="_blank">
+                        スライドショーを開く
+                    </a>
+                    <a href="naishintips-chu3-slideshow.html?autoplay=true" class="btn btn-success" target="_blank">
+                        自動再生で開く
+                    </a>
+                </div>
             </div>
         </div>
 
