Add new tips slideshow: 内申点の考え方【中2編】
- Created naishintips-chu2-slideshow.html focusing on mental stability and using strong subjects as pillars
- Emphasizes the importance of endurance for weak subjects during mentally unstable 2nd year
- Updated manual-recording-guide.html and index-v3.html to include the new slideshow
- Complete set of tips for all middle school grades now available

--- a/index-v3.html
+++ b/index-v3.html
@@ -609,6 +609,7 @@
                             <option value="juku-data-tips">塾講師が教える「データの正しい見方」</option>
                             <option value="sns-tips">SNS投稿 完全攻略ガイド</option>
                             <option value="naishintips-chu1">内申点の考え方【中1編】英語の重要性</option>
+                            <option value="naishintips-chu2">内申点の考え方【中2編】得意科目を柱に</option>
                             <option value="naishintips-chu3">内申点の考え方【中3編】志望校とのギャップ戦略</option>
                         </select>
                     </div>
@@ -1234,6 +1235,7 @@
                     'juku-data-tips': 'juku-data-tips-slideshow-fixed.html',
                     'sns-tips': 'sns-tips-slideshow.html',
                     'naishintips-chu1': 'naishintips-chu1-slideshow.html',
+                    'naishintips-chu2': 'naishintips-chu2-slideshow.html',
                     'naishintips-chu3': 'naishintips-chu3-slideshow.html'
                 };
                 
@@ -1538,6 +1540,7 @@
                 'juku-data-tips': 'juku-data-tips-slideshow-fixed.html',
                 'sns-tips': 'sns-tips-slideshow.html',
                 'naishintips-chu1': 'naishintips-chu1-slideshow.html',
+                'naishintips-chu2': 'naishintips-chu2-slideshow.html',
                 'naishintips-chu3': 'naishintips-chu3-slideshow.html'
             };
             
