--- a/index-v3.html
+++ b/index-v3.html
@@ -611,6 +611,7 @@
                             <option value="naishintips-chu1">内申点の考え方【中1編】英語の重要性</option>
                             <option value="naishintips-chu2">内申点の考え方【中2編】得意科目を柱に</option>
                             <option value="naishintips-chu3">内申点の考え方【中3編】志望校とのギャップ戦略</option>
+                            <option value="shogaku5-tips">小学生時点での理想【小5編】現在地を知る</option>
                         </select>
                     </div>
                     <div id="videoPreviewContainer" style="margin-top: 15px; display: none;">
@@ -1236,7 +1237,8 @@
                     'sns-tips': 'sns-tips-slideshow.html',
                     'naishintips-chu1': 'naishintips-chu1-slideshow.html',
                     'naishintips-chu2': 'naishintips-chu2-slideshow.html',
-                    'naishintips-chu3': 'naishintips-chu3-slideshow.html'
+                    'naishintips-chu3': 'naishintips-chu3-slideshow.html',
+                    'shogaku5-tips': 'shogaku5-tips-slideshow.html'
                 };
                 
                 videoPreview.src = videoUrls[videoSelect.value] || '';
@@ -1541,7 +1543,8 @@
                 'sns-tips': 'sns-tips-slideshow.html',
                 'naishintips-chu1': 'naishintips-chu1-slideshow.html',
                 'naishintips-chu2': 'naishintips-chu2-slideshow.html',
-                'naishintips-chu3': 'naishintips-chu3-slideshow.html'
+                'naishintips-chu3': 'naishintips-chu3-slideshow.html',
+                'shogaku5-tips': 'shogaku5-tips-slideshow.html'
             };
             
             const slideshowUrl = slideshowUrls[videoSelect.value];
