--- a/manual-recording-guide.html
+++ b/manual-recording-guide.html
@@ -339,6 +339,21 @@
                         自動再生で開く
                     </a>
                 </div>
+                
+                <div class="slideshow-card">
+                    <div class="slideshow-icon">🌐</div>
+                    <h3 class="slideshow-title">小学生時点での理想【小5編】</h3>
+                    <p class="slideshow-description">
+                        現在地を知り、世界の広さを体験する重要性についての20秒動画<br>
+                        1080×1080px / 5スライド
+                    </p>
+                    <a href="shogaku5-tips-slideshow.html" class="btn" target="_blank">
+                        スライドショーを開く
+                    </a>
+                    <a href="shogaku5-tips-slideshow.html?autoplay=true" class="btn btn-success" target="_blank">
+                        自動再生で開く
+                    </a>
+                </div>
             </div>
         </div>
 
