Add new tips slideshow: 小学生時点での理想【小6編】
- Created shogaku6-tips-slideshow.html focusing on understanding strengths and weaknesses before middle school
- Emphasizes importance of knowing one's abilities in English, Math, and Japanese
- Highlights how this self-awareness helps in planning middle school strategies
- Updated manual-recording-guide.html and index-v3.html to include the new slideshow
- Added SNS post template for 小6 content
- Complete elementary school tips series now available (小5 and 小6)

--- a/index-v3.html
+++ b/index-v3.html
@@ -612,6 +612,7 @@
                             <option value="naishintips-chu2">内申点の考え方【中2編】得意科目を柱に</option>
                             <option value="naishintips-chu3">内申点の考え方【中3編】志望校とのギャップ戦略</option>
                             <option value="shogaku5-tips">小学生時点での理想【小5編】現在地を知る</option>
+                            <option value="shogaku6-tips">小学生時点での理想【小6編】得意不得意を把握</option>
                         </select>
                     </div>
                     <div id="videoPreviewContainer" style="margin-top: 15px; display: none;">
@@ -1238,7 +1239,8 @@
                     'naishintips-chu1': 'naishintips-chu1-slideshow.html',
                     'naishintips-chu2': 'naishintips-chu2-slideshow.html',
                     'naishintips-chu3': 'naishintips-chu3-slideshow.html',
-                    'shogaku5-tips': 'shogaku5-tips-slideshow.html'
+                    'shogaku5-tips': 'shogaku5-tips-slideshow.html',
+                    'shogaku6-tips': 'shogaku6-tips-slideshow.html'
                 };
                 
                 videoPreview.src = videoUrls[videoSelect.value] || '';
@@ -1544,7 +1546,8 @@
                 'naishintips-chu1': 'naishintips-chu1-slideshow.html',
                 'naishintips-chu2': 'naishintips-chu2-slideshow.html',
                 'naishintips-chu3': 'naishintips-chu3-slideshow.html',
-                'shogaku5-tips': 'shogaku5-tips-slideshow.html'
+                'shogaku5-tips': 'shogaku5-tips-slideshow.html',
+                'shogaku6-tips': 'shogaku6-tips-slideshow.html'
             };
             
             const slideshowUrl = slideshowUrls[videoSelect.value];
