--- a/manual-recording-guide.html
+++ b/manual-recording-guide.html
@@ -354,6 +354,21 @@
                         自動再生で開く
                     </a>
                 </div>
+                
+                <div class="slideshow-card">
+                    <div class="slideshow-icon">🎓</div>
+                    <h3 class="slideshow-title">小学生時点での理想【小6編】</h3>
+                    <p class="slideshow-description">
+                        中学前に自分の得意不得意を把握し、計画的にスタートする重要性の20秒動画<br>
+                        1080×1080px / 5スライド
+                    </p>
+                    <a href="shogaku6-tips-slideshow.html" class="btn" target="_blank">
+                        スライドショーを開く
+                    </a>
+                    <a href="shogaku6-tips-slideshow.html?autoplay=true" class="btn btn-success" target="_blank">
+                        自動再生で開く
+                    </a>
+                </div>
             </div>
         </div>
 
