Add background image version of chu1 slideshow
- Created naishintips-chu1-bg-slideshow.html with classroom background image
- Added teacher photo (IMG_0354.png) on final slide
- Implemented semi-transparent overlay for better text readability
- White text and boxes for high contrast against dark background
- Updated manual-recording-guide.html with new background version section

--- a/manual-recording-guide.html
+++ b/manual-recording-guide.html
@@ -372,6 +372,30 @@
             </div>
         </div>
 
+        <div class="slideshow-section" style="margin-top: 40px;">
+            <h2 style="text-align: center; color: #34495e; margin-bottom: 10px;">📸 背景画像版スライドショー</h2>
+            <p style="text-align: center; color: #7f8c8d; margin-bottom: 30px;">
+                プロフェッショナルな背景画像を使用したバージョン
+            </p>
+            
+            <div class="slideshow-grid">
+                <div class="slideshow-card">
+                    <div class="slideshow-icon">🖼️</div>
+                    <h3 class="slideshow-title">内申点の考え方【中1編】背景版</h3>
+                    <p class="slideshow-description">
+                        教室の背景画像と講師写真を使用したプロフェッショナル版<br>
+                        1080×1080px / 5スライド / 30秒
+                    </p>
+                    <a href="naishintips-chu1-bg-slideshow.html" class="btn" target="_blank">
+                        スライドショーを開く
+                    </a>
+                    <a href="naishintips-chu1-bg-slideshow.html?autoplay=true" class="btn btn-success" target="_blank">
+                        自動再生で開く
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <div class="guide-section">
             <h2 class="guide-title">📋 録画手順</h2>
             <ol class="guide-steps">
