Fix layout issues and remove unnecessary emojis from all rich slideshows

--- a/naishintips-chu1-rich-slideshow.html
+++ b/naishintips-chu1-rich-slideshow.html
@@ -612,8 +612,7 @@
         <!-- スライド1: タイトル -->
         <div class="slide slide-1 active" style="background-image: url('images/2438464.jpg');">
             <div class="gradient-bg"></div>
-            <div class="floating-element float-1">📚</div>
-            <div class="floating-element float-2">✨</div>
+            <div class="floating-element float-1" style="top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 80px; animation-delay: 0s;">⚡</div>
             <h1 class="main-title">
                 内申点に関しての<br>
                 考え方【中1編】
@@ -631,7 +630,6 @@
 
         <!-- スライド2: 重要性の説明 -->
         <div class="slide slide-2" style="background-image: url('images/2438464.jpg');">
-            <div class="floating-element float-3">💡</div>
             <h2 class="section-header">なぜ中1の英語が重要なのか？</h2>
             <div class="content-box">
                 <div class="warning-icon">⚡</div>
@@ -698,8 +696,10 @@
 
         <!-- スライド5: まとめ -->
         <div class="slide slide-5" style="background-image: url('images/2438464.jpg');">
-            <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
-            <h2 class="action-header">今すぐ始めよう！</h2>
+            <div style="display: flex; flex-direction: column; align-items: center;">
+                <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
+                <h2 class="action-header">今すぐ始めよう！</h2>
+            </div>
             <div class="summary-box">
                 <p class="key-message">
                     中1の英語内申点は<br>
@@ -712,7 +712,7 @@
                     英語を得意科目に！
                 </div>
             </div>
-            <div class="save-recommendation">
+            <div class="save-recommendation" style="bottom: 50px;">
                 <span class="save-icon">📑</span>
                 <span>保存して何度でも確認</span>
             </div>
