--- a/naishintips-chu3-rich-slideshow.html
+++ b/naishintips-chu3-rich-slideshow.html
@@ -642,9 +642,8 @@
         <div class="particles" id="particles"></div>
 
         <!-- スライド1: タイトル -->
-        <div class="slide slide-1 active" style="background-image: url('images/1.png');">
+        <div class="slide slide-1 active" style="background-image: url('images/2438464.jpg');">
             <div class="gradient-bg"></div>
-            <div class="floating-element float-1">🎯</div>
             <div class="floating-element float-2">✨</div>
             <img src="images/11.png" class="character-img" style="position: absolute; top: 60px; right: 60px;" alt="先生キャラクター">
             <h1 class="main-title">
@@ -663,7 +662,7 @@
         </div>
 
         <!-- スライド2: 理想と現実 -->
-        <div class="slide slide-2" style="background-image: url('images/1.png');">
+        <div class="slide slide-2" style="background-image: url('images/2438464.jpg');">
             <div class="floating-element float-3">💡</div>
             <h2 class="section-header">進路選択の距離感を把握</h2>
             <div class="compare-container">
@@ -686,7 +685,7 @@
         </div>
 
         <!-- スライド3: ギャップ分析 -->
-        <div class="slide slide-3" style="background-image: url('images/1.png');">
+        <div class="slide slide-3" style="background-image: url('images/2438464.jpg');">
             <h2 class="gap-header">ギャップを正確に把握！</h2>
             <div class="gap-visual">
                 <div class="gap-item">
@@ -712,7 +711,7 @@
         }
 
         <!-- スライド4: 具体的な対策 -->
-        <div class="slide slide-4" style="background-image: url('images/1.png');">
+        <div class="slide slide-4" style="background-image: url('images/2438464.jpg');">
             <h2 class="section-header">合格への具体的戦略</h2>
             <div style="max-width: 900px;">
                 <div class="strategy-card">
@@ -730,23 +729,24 @@
         </div>
 
         <!-- スライド5: まとめ -->
-        <div class="slide slide-5" style="background-image: url('images/1.png');">
+        <div class="slide slide-5" style="background-image: url('images/2438464.jpg');">
             <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
             <img src="images/14.png" class="character-img" style="position: absolute; top: 50px; right: 50px; width: 180px;" alt="まとめ先生">
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 3px 3px 10px rgba(0,0,0,0.8);">今すぐ行動しよう！</h2>
             <div style="background: rgba(255,255,255,0.95); border-radius: 30px; padding: 50px; max-width: 850px;">
                 <p style="font-size: 36px; line-height: 1.6; margin-bottom: 30px; text-align: center; color: #2c3e50;">
+                    カラーテスト90点、模試50点でも大丈夫<br>
+                    ここから上げていこう！<br>
+                    <br>
                     中3の今こそ<br>
                     ギャップを正確に把握して<br>
-                    <br>
-                    戦略的に内申点アップ！<br>
-                    本番での得点計画を立てよう
+                    戦略的に内申点アップ！
                 </p>
                 <div class="cta-button">
                     合格への道筋を作る！
                 </div>
             </div>
-            <div class="save-recommendation">
+            <div class="save-recommendation" style="bottom: 50px;">
                 <span class="save-icon">📑</span>
                 <span>保存して何度でも確認</span>
             </div>
