--- a/shogaku6-tips-rich-slideshow.html
+++ b/shogaku6-tips-rich-slideshow.html
@@ -642,10 +642,8 @@
         <div class="particles" id="particles"></div>
 
         <!-- スライド1: タイトル -->
-        <div class="slide slide-1 active" style="background-image: url('images/3.png');">
+        <div class="slide slide-1 active" style="background-image: url('images/2438464.jpg');">
             <div class="gradient-bg"></div>
-            <div class="floating-element float-1">🎓</div>
-            <div class="floating-element float-2">✨</div>
             <img src="images/2.png" class="character-img" style="position: absolute; top: 60px; right: 60px;" alt="先生キャラクター">
             <h1 class="main-title">
                 小学生時点での理想<br>
@@ -663,8 +661,7 @@
         </div>
 
         <!-- スライド2: 中学前の準備 -->
-        <div class="slide slide-2" style="background-image: url('images/3.png');">
-            <div class="floating-element float-3">💡</div>
+        <div class="slide slide-2" style="background-image: url('images/2438464.jpg');">
             <h2 class="section-header">中学に上がる前に見つけたいこと</h2>
             <div class="preparation-box">
                 <h3 style="font-size: 40px; font-weight: 700; color: #2c3e50; margin-bottom: 30px;">
@@ -679,7 +676,7 @@
         </div>
 
         <!-- スライド3: 科目別の把握 -->
-        <div class="slide slide-3" style="background-image: url('images/3.png');">
+        <div class="slide slide-3" style="background-image: url('images/2438464.jpg');">
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 4px 4px 10px rgba(0,0,0,0.8);">3教科の得意・苦手を把握</h2>
             <div class="subjects-grid">
                 <div class="subject-card">
@@ -709,7 +706,7 @@
         }
 
         <!-- スライド4: プラン立ての重要性 -->
-        <div class="slide slide-4" style="background-image: url('images/3.png');">
+        <div class="slide slide-4" style="background-image: url('images/2438464.jpg');">
             <h2 class="section-header">苦手を知っているメリット</h2>
             <div style="max-width: 900px;">
                 <div class="plan-visual">
@@ -741,7 +738,7 @@
         </div>
 
         <!-- スライド5: まとめ -->
-        <div class="slide slide-5" style="background-image: url('images/3.png');">
+        <div class="slide slide-5" style="background-image: url('images/2438464.jpg');">
             <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
             <img src="images/6.png" class="character-img" style="position: absolute; top: 50px; right: 50px; width: 180px;" alt="まとめ先生">
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 3px 3px 10px rgba(0,0,0,0.8);">小6の今がチャンス！</h2>
@@ -757,7 +754,7 @@
                     今すぐ自己分析！
                 </div>
             </div>
-            <div class="save-recommendation">
+            <div class="save-recommendation" style="bottom: 50px;">
                 <span class="save-icon">📑</span>
                 <span>保存して何度でも確認</span>
             </div>
