--- a/shogaku5-tips-rich-slideshow.html
+++ b/shogaku5-tips-rich-slideshow.html
@@ -640,8 +640,6 @@
         <!-- スライド1: タイトル -->
         <div class="slide slide-1 active" style="background-image: url('images/22703507.jpg');">
             <div class="gradient-bg"></div>
-            <div class="floating-element float-1">🌍</div>
-            <div class="floating-element float-2">✨</div>
             <img src="images/5.png" class="character-img" style="position: absolute; top: 60px; right: 60px;" alt="先生キャラクター">
             <h1 class="main-title">
                 小学生時点での理想<br>
@@ -750,7 +748,7 @@
                     今すぐ模試に挑戦！
                 </div>
             </div>
-            <div class="save-recommendation">
+            <div class="save-recommendation" style="bottom: 50px;">
                 <span class="save-icon">📑</span>
                 <span>保存して何度でも確認</span>
             </div>
