--- a/naishintips-chu3-rich-slideshow.html
+++ b/naishintips-chu3-rich-slideshow.html
@@ -735,14 +735,13 @@
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 3px 3px 10px rgba(0,0,0,0.8);">今すぐ行動しよう！</h2>
             <div style="background: rgba(255,255,255,0.95); border-radius: 30px; padding: 50px; max-width: 850px;">
                 <p style="font-size: 36px; line-height: 1.6; margin-bottom: 30px; text-align: center; color: #2c3e50;">
-                    カラーテスト90点、模試50点でも大丈夫<br>
-                    ここから上げていこう！<br>
-                    <br>
                     中3の今こそ<br>
                     ギャップを正確に把握して<br>
-                    戦略的に内申点アップ！
+                    <br>
+                    戦略的に内申点アップ！<br>
+                    本番での得点計画を立てよう
                 </p>
-                <div class="cta-button">
+                <div class="cta-button" style="margin: 30px auto 0 auto;">
                     合格への道筋を作る！
                 </div>
             </div>
