--- a/naishintips-chu2-rich-slideshow.html
+++ b/naishintips-chu2-rich-slideshow.html
@@ -24,7 +24,7 @@
         .video-container {
             width: 1080px;
             height: 1080px;
-            background: black;
+            background: white;
             position: relative;
             overflow: hidden;
             box-shadow: 0 0 80px rgba(0,0,0,0.8);
@@ -69,6 +69,18 @@
             height: 100%;
             background: rgba(0, 0, 0, 0.4);
             z-index: 1;
+        }
+        
+        /* 白い下地 */
+        .slide::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: white;
+            z-index: 0;
         }
 
         /* パーティクルエフェクト */
@@ -750,7 +762,7 @@
                     不安定な時期だからこそ<br>
                     バランスを大切に進もう！
                 </p>
-                <div class="cta-button">
+                <div class="cta-button" style="margin: 30px auto 0 auto;">
                     今日から実践！
                 </div>
             </div>
