--- a/shogaku5-tips-rich-slideshow.html
+++ b/shogaku5-tips-rich-slideshow.html
@@ -738,6 +738,9 @@
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 3px 3px 10px rgba(0,0,0,0.8);">小5から始める成長習慣</h2>
             <div style="background: rgba(255,255,255,0.95); border-radius: 30px; padding: 50px; max-width: 850px;">
                 <p style="font-size: 36px; line-height: 1.6; margin-bottom: 30px; text-align: center; color: #2c3e50;">
+                    カラーテスト90点で油断しない<br>
+                    模試50点でも大丈夫、ここから上げる！<br>
+                    <br>
                     カラーテストだけでなく<br>
                     模試を有効活用して<br>
                     <br>
