Fix remaining layout issues, remove unnecessary emojis, and update backgrounds

--- a/naishintips-chu2-rich-slideshow.html
+++ b/naishintips-chu2-rich-slideshow.html
@@ -659,7 +659,7 @@
         <div class="particles" id="particles"></div>
 
         <!-- スライド1: タイトル -->
-        <div class="slide slide-1 active" style="background-image: url('images/26160617.png');">
+        <div class="slide slide-1 active" style="background-image: url('images/2438464.jpg');">
             <div class="gradient-bg"></div>
             <div class="floating-element float-2">✨</div>
             <img src="images/8.png" class="character-img" style="position: absolute; top: 60px; right: 60px;" alt="先生キャラクター">
@@ -679,7 +679,7 @@
         </div>
 
         <!-- スライド2: 得意科目と苦手科目 -->
-        <div class="slide slide-2" style="background-image: url('images/26160617.png');">
+        <div class="slide slide-2" style="background-image: url('images/2438464.jpg');">
             <div class="floating-element float-3">💡</div>
             <h2 class="section-header">得意科目の有無と苦手科目の把握</h2>
             <div class="subject-balance">
@@ -704,7 +704,7 @@
         </div>
 
         <!-- スライド3: 精神的な不安定期 -->
-        <div class="slide slide-3" style="background-image: url('images/26160617.png');">
+        <div class="slide slide-3" style="background-image: url('images/2438464.jpg');">
             <h2 class="mental-header">中2は精神的に不安定な時期</h2>
             <div class="mental-box">
                 <p style="font-size: 36px; line-height: 1.6; margin-bottom: 30px; color: #2c3e50;">
@@ -722,7 +722,7 @@
         </div>
 
         <!-- スライド4: 戦略 -->
-        <div class="slide slide-4" style="background-image: url('images/26160617.png');">
+        <div class="slide slide-4" style="background-image: url('images/2438464.jpg');">
             <h2 class="section-header">中2の内申点戦略</h2>
             <div class="strategy-flow">
                 <div class="flow-item">
@@ -750,7 +750,7 @@
         </div>
 
         <!-- スライド5: まとめ -->
-        <div class="slide slide-5" style="background-image: url('images/26160617.png');">
+        <div class="slide slide-5" style="background-image: url('images/2438464.jpg');">
             <img src="images/IMG_0355.png" class="teacher-photo" alt="講師">
             <img src="images/6.png" class="character-img" style="position: absolute; top: 50px; right: 50px; width: 180px;" alt="まとめ先生">
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 3px 3px 10px rgba(0,0,0,0.8);">中2を乗り切る秘訣</h2>
@@ -762,7 +762,7 @@
                     不安定な時期だからこそ<br>
                     バランスを大切に進もう！
                 </p>
-                <div class="cta-button" style="margin: 30px auto 0 auto;">
+                <div class="cta-button" style="margin: 30px auto 0 auto; text-align: center;">
                     今日から実践！
                 </div>
             </div>
