--- a/shogaku5-tips-rich-slideshow.html
+++ b/shogaku5-tips-rich-slideshow.html
@@ -738,16 +738,13 @@
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 3px 3px 10px rgba(0,0,0,0.8);">小5から始める成長習慣</h2>
             <div style="background: rgba(255,255,255,0.95); border-radius: 30px; padding: 50px; max-width: 850px;">
                 <p style="font-size: 36px; line-height: 1.6; margin-bottom: 30px; text-align: center; color: #2c3e50;">
-                    カラーテスト90点で油断しない<br>
-                    模試50点でも大丈夫、ここから上げる！<br>
-                    <br>
                     カラーテストだけでなく<br>
                     模試を有効活用して<br>
                     <br>
                     広い世界を知る経験が<br>
                     今後の成長に生きてくる！
                 </p>
-                <div class="cta-button">
+                <div class="cta-button" style="margin: 30px auto 0 auto;">
                     今すぐ模試に挑戦！
                 </div>
             </div>
