--- a/naishintips-chu1-rich-slideshow.html
+++ b/naishintips-chu1-rich-slideshow.html
@@ -629,7 +629,6 @@
 
         <!-- スライド2: 重要性の説明 -->
         <div class="slide slide-2" style="background-image: url('images/2438464.jpg');">
-            <div class="floating-element" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 80px; z-index: 2;">⚡</div>
             <h2 class="section-header">なぜ中1の英語が重要なのか？</h2>
             <div class="content-box">
                 <div class="warning-icon">⚡</div>
@@ -698,8 +697,8 @@
         <div class="slide slide-5" style="background-image: url('images/2438464.jpg');">
             <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
             <h2 class="action-header" style="margin-bottom: 30px;">今すぐ始めよう！</h2>
-            <div class="summary-box" style="display: flex; flex-direction: column; align-items: center;">
-                <p class="key-message">
+            <div class="summary-box" style="display: flex; flex-direction: column; align-items: center; background: rgba(255,255,255,0.98); padding: 60px;">
+                <p class="key-message" style="color: #2c3e50;">
                     中1の英語内申点は<br>
                     3年間の土台となる！<br>
                     <br>
