--- a/shogaku6-tips-rich-slideshow.html
+++ b/shogaku6-tips-rich-slideshow.html
@@ -750,7 +750,7 @@
                     中学生活を<br>
                     戦略的にスタート！
                 </p>
-                <div class="cta-button" style="margin: 30px auto 0 auto;">
+                <div class="cta-button" style="margin: 30px auto 0 auto; text-align: center;">
                     今すぐ自己分析！
                 </div>
             </div>
