--- a/shogaku6-tips-rich-slideshow.html
+++ b/shogaku6-tips-rich-slideshow.html
@@ -742,7 +742,7 @@
             <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
             <img src="images/6.png" class="character-img" style="position: absolute; top: 50px; right: 50px; width: 180px;" alt="まとめ先生">
             <h2 style="font-size: 56px; font-weight: 800; margin-bottom: 40px; text-align: center; color: white; text-shadow: 3px 3px 10px rgba(0,0,0,0.8);">小6の今がチャンス！</h2>
-            <div style="background: rgba(255,255,255,0.95); border-radius: 30px; padding: 50px; max-width: 850px;">
+            <div style="background: rgba(255,255,255,0.95); border-radius: 30px; padding: 50px; max-width: 850px; display: flex; flex-direction: column; align-items: center;">
                 <p style="font-size: 36px; line-height: 1.6; margin-bottom: 30px; text-align: center; color: #2c3e50;">
                     英語・算数・国語<br>
                     自分の得意不得意を知って<br>
@@ -750,7 +750,7 @@
                     中学生活を<br>
                     戦略的にスタート！
                 </p>
-                <div class="cta-button" style="margin: 30px auto 0 auto; text-align: center;">
+                <div class="cta-button" style="margin: 30px auto 0 auto; text-align: center; display: inline-block;">
                     今すぐ自己分析！
                 </div>
             </div>
