--- a/naishintips-chu1-rich-slideshow.html
+++ b/naishintips-chu1-rich-slideshow.html
@@ -631,8 +631,8 @@
         <div class="slide slide-2" style="background-image: url('images/2438464.jpg');">
             <h2 class="section-header">なぜ中1の英語が重要なのか？</h2>
             <div class="content-box">
-                <div class="warning-icon">⚡</div>
-                <p class="importance-text">
+                <div class="warning-icon" style="display: flex; justify-content: center; align-items: center;">⚡</div>
+                <p class="importance-text" style="font-size: 42px; font-weight: 800; line-height: 1.6;">
                     英語でつまずくと<br>
                     中2・中3に大きな影響！
                 </p>
@@ -695,18 +695,20 @@
 
         <!-- スライド5: まとめ -->
         <div class="slide slide-5" style="background-image: url('images/2438464.jpg');">
-            <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
-            <h2 class="action-header" style="margin-bottom: 30px;">今すぐ始めよう！</h2>
-            <div class="summary-box" style="display: flex; flex-direction: column; align-items: center; background: rgba(255,255,255,0.98); padding: 60px;">
-                <p class="key-message" style="color: #2c3e50;">
-                    中1の英語内申点は<br>
-                    3年間の土台となる！<br>
-                    <br>
-                    今から確実に<br>
-                    基礎を固めていこう
-                </p>
-                <div class="cta-button" style="margin: 30px auto 0 auto;">
-                    英語を得意科目に！
+            <div style="display: flex; flex-direction: column; align-items: center; width: 100%;">
+                <img src="images/IMG_0354.png" class="teacher-photo" alt="講師">
+                <h2 class="action-header" style="margin-bottom: 40px; font-size: 64px; background: linear-gradient(135deg, #e74c3c, #c0392b); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: none;">今すぐ始めよう！</h2>
+                <div class="summary-box" style="display: flex; flex-direction: column; align-items: center; background: linear-gradient(135deg, rgba(255,255,255,0.98), rgba(248,249,250,0.98)); padding: 70px; border-radius: 40px; box-shadow: 0 20px 60px rgba(0,0,0,0.2); border: 3px solid #e74c3c; max-width: 900px;">
+                    <p class="key-message" style="color: #2c3e50; font-size: 40px; font-weight: 700; line-height: 1.7;">
+                        中1の英語内申点は<br>
+                        <span style="color: #e74c3c; font-size: 48px;">3年間の土台</span>となる！<br>
+                        <br>
+                        今から確実に<br>
+                        基礎を固めていこう
+                    </p>
+                    <div class="cta-button" style="margin: 40px auto 0 auto; padding: 30px 80px; font-size: 36px; background: linear-gradient(135deg, #e74c3c, #c0392b); box-shadow: 0 15px 40px rgba(231, 76, 60, 0.4);">
+                        英語を得意科目に！
+                    </div>
                 </div>
             </div>
             <div class="save-recommendation" style="bottom: 50px;">
